# chat-npc

./: README.md  docker-compose.yml  main.py  model.py  pipeline.py  pyproject.toml
nodes/chat_node/: chat_node.py  chat_prompt.py
nodes/memory_node/: memory_node.py
nodes/sentinel_node/: sentinel_node.py  type.py
tests/: test_sentinel_node.py
