[tool.poetry]
name = "chat-npc"
version = "0.1.0"
description = ""
authors = ["saechanOh <saechan.oh@docenty.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.26"
langgraph = "^0.5.1"
langchain-openai = "^0.3.27"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
