[tool.poetry]
name = "chat-npc"
version = "0.1.0"
description = ""
authors = ["saechanOh <saechan.oh@docenty.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.26"
langgraph = "^0.5.1"
langchain-openai = "^0.3.27"
dotenv = "^0.9.9"
numpy = "^2.3.1"
scikit-learn = "^1.7.0"
loguru = "^0.7.3"
transformers = "^4.53.1"
torch = "^2.7.1"
pytest = "^8.4.1"
beanie = "^1.30.0"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
